# FOND4LTLf

./: .gitignore  .gitignore.txt  .pre-commit-config.yaml  404.html  AUTHORS.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  Pipfile  README.md  dfagame.py  fond4ltlfpltl.py  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: docs.yml  lint.yml  pythonpackage.yml  test.yml
AutomaParser/: aparser.py  automa.dot  automa.py
PDDLparser/: Lexer.py  Parser.py  action.py  domain.py  formula.py  lexer.py  literal.py  operator.py  parser.out  parser.py  parsetab.py  predicate.py  problem.py  prova.pddl  term.py
authors/: index.html
contributing/: index.html
dfagame/AutomaParser/: aparser.py  automa.py
dfagame/PDDLparser/: action.py  domain.py  formula.py  literal.py  parser.out  parser.py  parsetab.py  predicate.py  problem.py
docs/: authors.md  references.md
fond4ltlf/: __init__.py  __main__.py  core.py
fond4ltlf/automa/: __init__.py  aparser.py  automaton.py  symbol.py
fond4ltlf/parser/: __init__.py  lexer.py  parser.py
fond4ltlf/pddl/: __init__.py  action.py  domain.py  formulas.py  literal.py  predicate.py  problem.py  term.py
fond4ltlfpltl/: __init__.py  __main__.py  __version__.py  core.py  test-via-code.py
fond4ltlfpltl/AutomaParser/: aparser.py  automa.py  (+1 more)
fond4ltlfpltlf/: __init__.py  __main__.py  __version__.py  core.py
history/: index.html
references/: index.html
scripts/: check_copyright.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_automaton.py  test_fond4ltlf.py  test_fond4ltlfpltlf.py  test_parsing.py
(+54 files in other folders)
