[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[aliases]
test = pytest

[flake8]
ignore = W503
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    fond4ltlfpltlf/__init__.py,
    fond4ltlfpltlf/parser/*
max-complexity = 10
max-line-length = 120
per-file-ignores =

[mypy]
python_version = 3.7
strict_optional = True

# Per-module options:

[mypy-fond4ltlfpltlf.parser.*]
ignore_errors = True

[mypy-ply.*]
ignore_missing_imports = True

[mypy-sympy.*]
ignore_missing_imports = True

[mypy-ltlf2dfa.*]
ignore_missing_imports = True

# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True
